--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Softnet MS
 description: The User Guide to Softnet Management System
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://softnet-free.github.io/softnet-ms" # the base hostname & protocol for your site, e.g. http://example.com
 repository: Softnet-Free/softnet-ms # for github-metadata
 
